[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
test-args = [
	"-device",
	"isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial",
	"stdio",
	"-display",
	"none"
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300 # In Seconds

[package.metadata.bootloader]
physical-memory-offset = "0x0000F00000000000"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
volatile = "0.3.0"
spin = "0.9.8"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
